--- a/IndigoSNSClient.indigoPlugin/Contents/Info.plist
+++ b/IndigoSNSClient.indigoPlugin/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>PluginVersion</key>
-	<string>.3</string>
+	<string>.31</string>
 	<key>ServerApiVersion</key>
 	<string>1.9.0</string>
 	<key>CFBundleDisplayName</key>
@@ -16,7 +16,7 @@
 	<array>
 		<dict>
 			<key>CFBundleURLName</key>
-			<string>https://github.com/mlamoure</string>
+			<string>https://github.com/mlamoure/IndigoSNSClient</string>
 		</dict>
 	</array>
 </dict>
